Ejemplos de texto en HTML

--- a/hola.html
+++ b/hola.html
@@ -4,6 +4,10 @@
         <title>Hola mundo</title>
     </head>
     <body>
+        <!-- Esto es un comentario y será ignorado por el navegador -->
+        <!-- Los comentarios
+        pueden https://github.com/eloyhz/figures-exercise.git
+        ocupar varias lineas -->
         <h1>Hola mundo!</h1>
     </body>
 </html>
