Ejemplo de imagenes e indice

--- a/hola.html
+++ b/hola.html
@@ -9,5 +9,7 @@
         pueden https://github.com/eloyhz/figures-exercise.git
         ocupar varias lineas -->
         <h1>Hola mundo!</h1>
+        
+        <a href="index.html">Inicio</a>
     </body>
 </html>
