--- a/imagenes.html
+++ b/imagenes.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <title>Imagenes</title>
     </head>
     <body>
         <h1>Ejemplo de imagenes</h1>
-        <img src="logo-uaslp.jpg">
+        <img src="logo-uaslp.jpeg" alt="Logo de la UASLP">
         
         <a href="index.html">Inicio</a>
     </body>
