Imagen en ubicacion externa

--- a/imagenes.html
+++ b/imagenes.html
@@ -5,8 +5,15 @@
     </head>
     <body>
         <h1>Ejemplo de imagenes</h1>
-        <img src="logo-uaslp.jpeg" alt="Logo de la UASLP">
         
+        <h2>Imagen en ubicación relativa</h2>
+        <img src="logo-uaslp.jpg" alt="Logo de la UASLP">
+        
+        <h2>Imagen en ubicación absoluta</h2>
+        <img src="https://source.unsplash.com/JRxedHrd7Aw" 
+            alt="External image"
+            height="500">
+
         <a href="index.html">Inicio</a>
     </body>
 </html>
