--- a/hola.html
+++ b/hola.html
@@ -11,5 +11,11 @@
         <h1>Hola mundo!</h1>
         
         <a href="index.html">Inicio</a>
+
+        <p>
+            <a href="https://validator.w3.org/check?uri=referer"><img
+                src="http://www.w3.org/Icons/valid-xhtml10"
+                alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+          </p>
     </body>
 </html>
