--- a/imagenes.html
+++ b/imagenes.html
@@ -7,7 +7,9 @@
         <h1>Ejemplo de imagenes</h1>
         
         <h2>Imagen en ubicación relativa</h2>
-        <img src="logo-uaslp.jpg" alt="Logo de la UASLP">
+        <a href="http://www.uaslp.mx" target="_blank">
+            <img src="logo-uaslp.jpg" alt="Logo de la UASLP">
+        </a>
         
         <h2>Imagen en ubicación absoluta</h2>
         <img src="https://source.unsplash.com/JRxedHrd7Aw" 
@@ -15,5 +17,11 @@
             height="500">
 
         <a href="index.html">Inicio</a>
+
+        <p>
+            <a href="https://validator.w3.org/check?uri=referer"><img
+                src="http://www.w3.org/Icons/valid-xhtml10"
+                alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+          </p>
     </body>
 </html>
