--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 
     <!-- Enlaces abosultos -->
     <a href="https://www.google.com" target="_blank">Ir a google</a>
+
+    <p>
+        <a href="https://validator.w3.org/check?uri=referer"><img
+            src="http://www.w3.org/Icons/valid-xhtml10"
+            alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+      </p>
+      
 </body>
 
 </html>
