Ejemplo de tablas

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <li>
             <a href="imagenes.html">Imagenes</a>
         </li>
+        <li>
+            <a href="tablas.html">Tablas</a>
+        </li>
     </ol>
 
     <!-- Enlaces abosultos -->
@@ -34,7 +37,7 @@
             src="http://www.w3.org/Icons/valid-xhtml10"
             alt="Valid XHTML 1.0!" height="31" width="88" /></a>
       </p>
-      
+
 </body>
 
 </html>
