Ejemplo de horario terminado. Pendiente terminar pokemon

--- a/index.html
+++ b/index.html
@@ -27,11 +27,19 @@
         <li>
             <a href="tablas.html">Tablas</a>
         </li>
+        <li>
+            <a href="horario.html">Horario</a>
+        </li>
+
+        <li>
+            <a href="pokemon.html">Pokemon</a>
+        </li>
     </ol>
 
     <!-- Enlaces abosultos -->
     <a href="https://www.google.com" target="_blank">Ir a google</a>
 
+    <!-- Validador en linea -->
     <p>
         <a href="https://validator.w3.org/check?uri=referer"><img
             src="http://www.w3.org/Icons/valid-xhtml10"
