--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <li>
             <a href="pokemon.html">Pokemon</a>
         </li>
+
+        <li>
+            <a href="registro.html">Registro</a>
+        </li>
     </ol>
 
     <!-- Enlaces abosultos -->
