--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <li>
             <a href="pokemon.html">Pokemon</a>
         </li>
+
+        <!-- Este es un comentario -->
     </ol>
 
     <!-- Enlaces abosultos -->
